# holiday-calculator

./: .gitignore  amount_exception.py  entitlement_counting_method.py  holiday.py  holiday_entitlement.py  main.py  pyproject.toml  user.py
.devcontainer/: devcontainer.json
dtos/: amount_exception_dto.py  holiday_dto.py  holiday_entitlement_dto.py  user_dto.py
holiday_calculator/: amount_exception.py  holiday.py  holiday_entitlement.py  main.py  user.py
holiday_calculator/dtos/: amount_exception_dto.py  holiday_dto.py  holiday_entitlement_dto.py  user_dto.py
tests/: test_amount_exception.py  test_holiday.py  test_holiday_entitlement.py  test_user.py
tests/dtos/: test_amount_exception_dto.py  test_holiday_dto.py  test_holiday_entitlement_dto.py  test_user_dto.py
